Fixes top spacing, removes spacing reserved for actionBar

--- a/css/global.scss
+++ b/css/global.scss
@@ -7889,7 +7889,7 @@ body.context-data{
 }
 
 .dataPage{
-  padding-top:200px;
+  padding-top: 150px;
   color: #666;
 }
 
@@ -8080,7 +8080,6 @@ display: none;
 }
     .glanceStats{
       display: flex;
-      margin-top: 50px;
     }
     .global_totals {
         background: white;
